tests/paczka2/big_fuzzy/58581092.err
Error in line 2: S"13 S6"6 14,3
Error in line 1: C2Vy2uXl S813 71,0
Error in line 14: sUJP S686 88,2
Error in line 17: sUJP S617 34,8
Error in line 20: C2Vy2uXl S686 85,0
Error in line 9: 8TIrT S813 20,1
Error in line 16: 6TdLBuGy S617 91,4
Error in line 31: S813 S912 16,1
Error in line 42: S813 S813 81,2
Error in line 25: sUJP S912 3,4
Error in line 48: sUJP S686 216,87
Error in line 45: sUJP S686 44,4
Error in line 52: 8TIrT S686 21,2
Error in line 51: C2Vy2uXl S686 90,9
Error in line 66: C2Vy2uXl S813 -4,0
Error in line 69: 6TdLBuGy S617 37,5
Error in line 76: sUJP S686 71,7
Error in line 77: C2Vy2uXl S912 89,2
Error in line 108: C2Vy2uXl S912 36,8
Error in line 114: 6TdLBuGy S617 79,44
Error in line 119: cqI S617 61,9
Error in line 122: C2Vy2uXl S813 42,4
Error in line 127: S813 S686 34,4
Error in line 123: C2Vy2uXl S912 31,5
Error in line 139: C2Vy2uXl S686 86,17
Error in line 128: S813 S813 969,2
Error in line 135: C2Vy2uXl S686 49,0
Error in line 150: 6TdLBuGy S617 -1,0
Error in line 157: C2Vy2uXl S617 60,0
Error in line 159: sUJP S813 85,6
Error in line 164: 6TdLBuGy S617 30,8
Error in line 172: cqI S617 74,1
Error in line 188: C2Vy2uXl S813 38,3
Error in line 207: sUJP S912 91,1
Error in line 211: 8TIrT S912 237,3
Error in line 218: XoIDI0N4dm S617 58,9
Error in line 200: cqI S686 50,5
Error in line 223: 8TIrT S8P3 35,P
Error in line 216: 8TIrT S686 33,5
Error in line 227: 8TIrT S813 26,3
Error in line 244: 8TIrT S686 38,1
